# RamenGL

./: .gitignore  CMakeLists.txt  README.md  setup.sh  task01.cpp
assets/shaders/: task03.frag  task03.vert  task05.frag  task05.vert  textures.frag
ramen/: ramen.cpp  ramen.h  rgl_camera.h  rgl_filesystem.cpp  rgl_filesystem.h  rgl_image.cpp  rgl_image.h  rgl_math.h  rgl_model.h  rgl_platform.cpp  rgl_platform.h  rgl_shader.cpp  rgl_shader.h  rgl_utils.cpp  rgl_utils.h
renderDoc/: task02.rdc
shaders/: task01.vert
tasks/: task02_documentation.md  task03.md  task03_documentation.md  task04.md  task04_documentation.md  task05.md
tasks_src/: CMakeLists.txt
tasks_src/task02/: task02.cpp
tasks_src/task03/: CMakeLists.txt  matrix_stack.h  task03.cpp
tasks_src/task04/: task04.cpp
tasks_src/task05/: task05.cpp
